--- a/build_msvc/bitcoin-tx/bitcoin-tx.vcxproj
+++ b/build_msvc/bitcoin-tx/bitcoin-tx.vcxproj
@@ -35,3 +35,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="..\common.vcxproj" />
 </Project>
+
+stand for running:
+
+C00=(o)trx/rc2pi
+C01= rtch/dsmo
+K100`mobb=23Gsh/ 4pi
