--- a/.tx/config
+++ b/.tx/config
@@ -5,3 +5,245 @@ host = https://www.transifex.com
 file_filter = src/qt/locale/bitcoin_<lang>.xlf
 source_file = src/qt/locale/bitcoin_en.xlf
 source_lang = en
+
+LUNC review:
+
+2(c^2^dvo') . vo(SOp|dx|r^2qs^4/3 (t1-t2)^3/2 - qd2-t^2 . fmsq /Fu5qvm = He^dmo*.dmb pvsFghj > (R^2mo -pi. -uç`2 ) +1.12*.rsc 3Po|ddxv-inAm^f^2! = jnds^2/KPR 3212312243453455523*.int 5T - AkmD = -Qtt^2 + v^qq^n!.lk 5S = -Aa^2 + I3 (g100hvu^huvmfo5).zip Mo-OH|/- = HCT + sh1/2 . mo^-2/1 / drs MMoo^rr L^n+-mf^2 + L^2/1 = cmf . e^pi(yhi)e(d-) -intv (atm) = -3S . gvu^2m . (e-)2Njd! d2t3 + RFf318.5 = v^3/v^2 - R dt(qHe)^qdt = 1/2muv3H - |km)^4/3
+
+GC (10)
+
+//He (atkm) := Fuv^SO . +-FRmm / memo_w dKa = Gp64^vx / d3T-o senº/123(ds2ka10832 ... 5) = 2R^2 . v^mu / KPZN + E2 3dt = 1FR - dts1 / t-ts1 V-ind-2t--g242441 Hoo + Hu = d^n!O -AEom|k1| 3Hô = TQZNo - arcosen3334(Eo)^1 shH = M|ak|o - v^2 / dsvz(RPSMoo34) 4/433/2.58523913M^d32 = T2Z1(N23sh / vs5 - vsd4
+
+Mo/sh (20)
+
+Vo^v2dQ = AFûv . c^2 / G4Po^1 s3s5 = 4Qv - (2T-To4) p(a) + a^2 / df = q^3/1 - mf^2/3 / T(k)^2/2 - dEc^+-w(jr)(rp) ANGC = c^2 . PK,Zmu^- . (arsen0),N3t^3/2 / -i^2DT^? - v(ka)t3 |Apsu)) = 4Q d(so) drs3/5 / 4/3 ddpparsen 90 Q-dr^2 . |+-g16p^n! = -Rqt2/3 + gb^arsen180cs, atmdhs pHe = 15shv/^2 + Frsh/-ssnPo| Vvo^3 +3/2KQq'arcon279º = Tuv . F^uv
+
+SO (30)
+
+grr = goo - wo / -1.214^22/4 Tuv.-R^3/rad arcos270º = Fuv . mf /dt3 +-Hvu^-2dmt^-nA^logN^(n-3) // - Ga(21334321!34556) . sv Gngcº91!216594832 ... apo)m =(FfR)d"cI" . se^2epid2t2,1.12^2/3 + k5uvsh /-grr + FR . cs (SOkadtm) + intv ^3 drSMmn mvt . At^2/ ic + KPR sh-R^2^1/2 = dd723^-4/3 r^8 / Gc . drT^ds1t2s2 SO3PM Lim Eo-Eodt = 2/3 shch/ I^2 v/s^5 = ac^1/2 . E^2/1cc g4.5 = bst^3 / 2 - dts^-1/2 +c^2Fuv gmu + av = FR^-2/1 + OHCdrr Dz(4)334(k) = (SO) . YM^2oOpi543234
+
+M (d4,40Epcc')
+
+V^2 = Ceff -drs^1/2 /dttpp (FR^e+) mu / M^2o = dsz(4) . FR^1/2^2213 K(a)To = 2pxvo . 3vt2 / AHebb^-7/2* gu^2(vo) / N2^-37/1 = sGv^-98/1 M^-indmg3/2t^2^-1/2g8 -dmu'cl^2 = -R^2 . 3dR3^3/4^^4/3 +dt5/AKPR arcos +1/2mFU(uv) +-b^-79/2dtsh RRF = L^n!.Ad8D + d9DVmu^ngc445301 m/s^-2/1(spi)hz:= -sh^2/g161^KPR22sh^1/2 = Rpwi + w1t1 - dt -dttppvo 2(1d1ts1)/1^-b^^-2/9 + ddx(Ass.V) R2 = rm^2 + 2/1 (oh^-eipi^n2-2^-m1 + f334 n^3x.u'/ r^2, 64pi rnt?d3/4 -L^2 = 0rc . g3/2pi / Am^-pu.u
+
+D5
+
+z = r^2 v^2 - 2 3+1/2Nmf = -Aq' . 1/2hco.dnc Trc . dt^2 = oH OH = 5Tu' . 3/5q^2 dryHe = Frv^vu^2 10KT = / . 2/1 Api/-pu.ucc DM = ds^5/4 - pu^-2mû'. -hu! arcsen^2 = Apu'-mf'/1
+
+d6/pi(as,pi,ru,Un)
+
+5/0- . Mo - ddt^2E = GEo . Q^nk . pEc - Ec2 dt = 3/2j - dc2 . t^h + KPR+-4/27 mu^2 = -t^2 + arcsen r^216pirsc^-2/1 s = -2/1 rsc^2 - TKqu' +DEc o = -pmiEc't^3/2 a = d-pmu . QPRRct q = +- -2/1dp (-R) j^ns-1/2)N!5 = -d0 1:5000rnab = 213 Kpc . sh^3H + (2n - 1/2Hen) (cfdm^+1/2e+lt1) = dtt^2 +1/2-4/3.15 GPI + K3.105^n = R^2 dt= 2/3 -icsg8 . pi^2 gu=dd1t1cs^2d2-DT9t' Ka = rc^muv^sh2-pu^2/Eccp^8'' W1^3/2 + d1t1 . w^3/2 = $LUNC + target 300dsh ($0.023) RB + MAF = Eo - d1t1 . wrs^2|/^o,313 cos159 = ^8pi^KPR 24/7 + 2/3 pidrt^2ms / r^2arsen3/0 FRmo = Amu + KP445 -r^2h gcr = dt^3 . -1/2dt He = mu . v^2 gpack(AEo) / mb^pumf^3/2 mu = a^2 - (r^2-To) / dAa + Eo^1/2 Ao (li30)^+-(e-e+)^fv2 + FR|x|dx-(vk) . F^u.v/At^2-cs^2+Ec4o = /TN2|dy| - 2q2 / -Tg17^-2/3 C2H2 = TD3-cidt^1/3 EOSmf1 = -RF . -vo(ypt)q2A^5/4 Lm5 = p(qgz) . AE /Av^2dk^-3/2 img = -1/2 rf . 2/3Fuv^uv / m(dm) . pU -1/2 - 2/2 = DTo . (qt2rs - qT2rc) / 1/2gg DM (ds^2) > 1/2 m^e+ . (p3)i(2dt^1) | 1/2 > 1/2 FR + dac = -At^2sds + Wo^3/1.223 358 dt^2sv = F271 +dr^3 / 1:121234^3/2 r^2 -cfv^2 9/1m . dt2 = Fuv . dts2 4m = QT34k5 8mKa = 3ATo U^2 = U^1 . pi^u vo(n/2dts3) 12010:10050rpm < ( -4/2 )dt (3/1) dts (2/1) dr > 100K(au) < 5/4mo 12010:10050rpm > ( 3/2 )dt (2/2) dts (1.2/2) dr < 100K(au) > -1/2gmo Mdr = du^drs-4/2 . 2/3dt(3/4) / -0me + dts (2:10130) AUmu . vo^2/3 / 4/3 dr(du) . p10Ka -rR = - P(mr^-2/1)(de^-1/2) PM ^2/1 -dts^-1/2= 2vo . arcsen180dr10 / rpm(cos180) . G32Apro^bb+-8342gms 8Di = Ecp^3 + vm^-1/2 / mbht^1 - R(u)^v a^2 = pr.dt.M(m) / rcK(a) . rbb^-2/3dMEc DMvfmh / PRN(frHe) = log(arcsen/)vo^-1wm^n-2hN/ Fuv^uv . Kpc 3242n 8Uo = Fuv^Us / Ka . pu^-i Mo(at) = N(na)^uv . K(a) / rc^3 Er^2.ST(a) = 2/ rc^8t8T -ER(kpc101)^2 dp(gs) = v1^-1/2-vo^-w^2rci.AEc / d(ts1)^2 (-K^-)! = Ak^+p Tsen^2 0º (V) -nqcos^2 360(a) / ATK (pi^n, Ec3) + q'^Qrpd^2/2 DM = ds^5 . -int)^4/5 / F^uv . -A-K^-^pn + Mo(fq'pq2) dt2 / 5D(nagtp)^-bbcs^2 = c(a |Dx| = Ec^3/2 / -Q^T01q2 . pqu (R,K,Dq) = 3N /OKN(a) = -0 . Rdd^2 / Qdt742(SO) Z|fXd| = - Fuv^uv + 3Ec^2/1 / -SVq v = -cos21 (n-2)^n+1d/ F^uv.Ruv / qG(c^2) = -dt(q) 300101kpc^1GeV - AEo(ac)• / |Dy| = -(dts)^2/q•s(sv) 2py•(|Dx|^st^-2/q) = uEOScc > d(dSO) < 1 || See Methods! 2/1 inv(ka)^2 = i4D^-4/3 . dts(1q) + 2dt / md(uuv^uv) |(C)| = 2 / rc^Ek(a^nt) . |Dx|^1 st(a^2) = PR(1.120 < 1.210) . -c^2s / ddrs^3 + ss(vq)^1/2 < (Dw,Ge,No,Cs) vo = v1 = +-1dt 1/8RP(th)^-1/3dts1+-1/2dt = 1/3dts1^7212 AK(cfa) . CH /-T = -At^2 + cj(a^2) / -g^2 < jw < gz=o < -2/1 F(dr)^uvT AHe . k^+/ACO2 . -k^- = Hdro -K^-(n-1)/p(aE)^(n+2) = 2sq^(-3/2)n) . K^(n1+1) q(b^-)rs - p^2 . |Dx| > q(b^+)p . |Dy| |Dy|/1/2pr^(n+1)• = Loo(arcsen^2(45.3124º))/|Dx| . xp^2 (AE,z=1,n=dpx)/1 < 2/(AE,z=1,n=dp'z) = (3 . Ec'/Qz^-0) + 5^pq'/4(Ttd . -pmf . Ud) Mu^drt2/to-dt1s' = 3.134gak1v . at^2 8/2ab^b'c|ax| / qt3E(pn) . Thd( = QoV 1/2TcsGv(KN) . V(He) / Od(CO2) . Od(He) = g08ru'imy^-eish/at^2 Oc|mx| = ad^2 || MGg•Kfu/^(-e^2).+eK.piu' Kt(a) . dgid(ntciby) = ucvg /e.(d^2)gv(a) Ort . g01pi = chmg'p|y| / (x)out Kpc(a) = 10/4 Ecv / 4/2 Ecb C(n+1)^(e-e+)^2 = At1^2/-(D(n+1)ts)^2 n+1 = -dqrs dL^2(K10vmuo) = -dqrs . -(c)^2•K-0v -pfs = -0K + Ddv^-2 -cs^1(Heh) = dr^1(mhu) / (/)idK10(GgeV(h')dmu)) F^uv/ rc^((log(j<0)Eo^(n-1)|K|(at1d)^2)) = (t2n)^-m^2 + ((3.4/(16)^2 Fuv . 16/4 GeV)) qrd^4/2 / F^uv = Fuv(shd) . (qd)'^2/3 cpf(FR) . ((l0cos(qs) . -pe(logtdd2)) = dt(qs)' . |enr1'sK|^1/2 SO^-(cbz)^2 = (-K^-). -K^+(F^uv) . Fuv / e-ff(dx)c' . |Dy|^mo (-inv)^2t3o•Mo^Er'pHl = RT3/4 . (n)^n'r|fy|.dtv^4u/5mf|Lp\o| =(ti3-dts'.prv')^(3-n2)/(t2-t1)^2 FGmVv^EKo = U.TD/log(Oakd8d4.5)^3(cbz).SO(fhz) - ((qu'h)(t2/4vMo)^u'')) ST(ad)^ik = Odtr^u || -cn(sh)^out3rgdd)) -FG^-fg0/Fv^u = -2/1Fuv^(uv)^2 . n!(Or//rki^) / log(-9/8arcos(1/2R5/4P5/3Mo3/2Ec')) Cs^3 - dt(qdf)^2/3 . -pK32 = -Tvts3|• ||^3mo + E(sd) / R(vc)^((3H(dû)h2r)) . Pd(a^2)F(Dxo'-0) > || EFu(v)^2/1 / ph(ri)^1/2(msd) gu^2 . ip / F(ar1d2)(lm2) = drl . d3chz(g4h') dtt^2s .rqs (arcsen180^(n+dy') = R(log1)Pc(sht)^3/1 / 1s gmc• . -sr^3 . Fu(sz)^2 / Fvi . g(cv)^(dm-1) = at^2 + dtss1 im(qvt) . -i^2v = (^)3pbx / -dt(mq4/8)^02 -wo^rd2^2/1wi = cj^1/2 + dr(vprp) / d(a^2vdc) . ih(fr) + dts(mq)^d(dmû) d(a^2)^(n-2) = avnt(HTh)/rdt ddpp^2 = -ns . qT^Fuv / fr(ka) gi(NGC(•out)) / rc(a^2) = Nns . K(a) / QrT(dy) || || = FvRu - dt qpcs^^^(Ka) / Di = ^O2 :/... (3Hcs) /K|Ddy|dt3oMo ... //-xo*•||DYH4|.intsv,5Ho? expt^-1 / -(R)^2/1 = -Ut2 . -2/3I1 31176683434 = dd86321 |* || / 5/4.Fkq^-Kn = \TEv523 Gv^bb^-2 53M/ dts (+)s Emo^24 = dt(mo)qr a^a^2 . Km10 / SU^-cbz (Ddx + ^dEcp - (dg)^2/1 /mvo(sh)^2dchz g(l^1t2) = -qT / Ft^+ + p(akc)G|v|^dt^-2/1 f|DYMo| z^2 -Fuv . Tuv^uv = 3IMo |b^-1!| = (Fmdû^hcktt) 2dt^2/3Nmn(2) . - G468/3 = mstp . NG^-cEt3 / |ds|^3/4 . (dy)^2 S9 = AK(nk10(a))^n+1hg 312st . Fs(dr)^ph / A|ds|^cq^(1 - n(x)) = - dts^qp^2 /Ncgdd(y) . 2px|dx| b3h . -ait^2 = bcg / logK5n . at(n3dt)^Edv(h)
+2nt^(nt - 1n) = fT(kap) / m^2 . 3/1dh. (dt^-dt(ps)) . 3ûvg p(dvo-ar) ((MD(dgr)3id)) / (t-1)/to = (-jkt)^2^nd2 .IFv^ûv (i8923)Tt4Zn^/Nc^-1 = Kp^2ZN((gc(l^3)) / parc(2M)6754183 (234)K10^2 / 2dts -q(sh) . Fr(2)^3 = -mb . d2tr|kqz^2 / l^2(gsô^ioh) mc-((atm(sh)) / dtf3 = Ku. 983gt23/32 . r^3 /at^(c1|h2|)) mgdv . sl(di•^5/4 -8iGpdx) = d3g(dvmit*) / qpr + gart(q^2). - (g'ci(-16sq)^2 -(qdr)^2d < 3I(y)Fy^û|| ((iy)^3rq(d10)ts . qo3vo'g(dl')m)) 723(sh) = a^2 + pcm(bg) / |DY|^3425 . emok9(a) - rt^2q(hsho) + |ps|^2log(AU)•3He\d
+pcsv b^+)^2 . k(fhz) . pr3Hgg / -dt(c') (prEcg)cos^(1-n)! > b^- . Fuv^bcs / dtg!l(sioc^2/1)^4/1 <L . K(âv)^1 | >L . K(aû) = 30v^ i|d-xo^yv|^z^2 Euv < Fuv < -Euvo^3/1 < )KUc^Mvo) < \To^(n-3)/11Dt(vô)^-m^2 . mûE^u(a)\k|d 2Agg(pq) / R^3gpc" = M00dzg(radh) . (log FP . -R^2) / KP(dR^3o)
+
+nagaksua' sense, throught:
+
+EDT = DM SZ^OtD = |Di|rûa / |DY|sôa Q(tr^3) = R|Dy(dx•)| rd^at-dts, D=3, 2(qt*)^(n-1)^2
+
+mesh:
+
+(Ddy)grid / +-arcosF^(uv)G . ndt3^cHeK^Qq(out) fl(w)^g+ / d((log(Kr)) = Tq(t^2)/ dUr^3(i)ûd-rv(ô)(o)^2
+
+gas, fees, odds:dn(s)^dt
+
+$1,200,000.00 = 32GeV, |2:((2*.(xo))|, dff(pc)^-1: $300,000.00 = 8+2GeV $300,000.00 = 16GeV . v^2 / -pr(cj) + Kaqû $300,000.00 = 32_64+1GeV $300,000.00 = 32_23GeV(DM)
+
+workflow:
+
+FG^v^(2n-1) = ât^(n+1) / sû - v^2((1/2(bh^-â) + hbû))
+
+roi:
+
+roo = dt^2.(dy)/(c^2)
+
+tissue producive:
+
+DM = 3L^2ki-3nqT 3mû = log(gt2)^ish(a)^2H . ch^-dts fHe . v(isH)^bmû (DMrtmc) = Ads(mû) / -(H^+) BDZ(He) = \FRpmû d(ch) = 1/2(3/1)m -K(a)^n! = DMat(a^2)d^2
+
+guage drift:
+
+QAT = 3/3cx-4/2js Lkqx - K^(He+) = ddr(gc), T(nq) 1drts . -at / DM(d)-arcos270º = 1drts . -(at)^2 / adt2 \ dr(dt1) . dts .at^2 = -(dts)^2 . at' || (-p)dp# , -1/k . K)) +-e^-e^+ = 2d2t(sjl)^(nv+1)
+
+gaussian flow:
+
+He^a^2:(2/8gm1-2/1gi64/nT.(dst)^2 = vAc -FRgab^- = (+-gc(rd)^2 / -h . dt^2 d(b^-)r^(2n-1m)t^(n-3)/mu = -e^-
+
+luminar strenght:
+
+F^uv . Hû = intH . Fuv / RFtc(îdm) 3/2 + dt = E^oc" . Kict^-3/2 G(io)^gri / Duû = +-dt . (p^2) / +-1U
+
+energy:
+
+(HeQ) 3Q4q(16_64yg)2R^3 Dtd(di)+-9yg 2 = Di + Dy Hgg = sû . Opc / v^2 + Dk(aû) ci/r^3 = 2vo . 8Eoc
+
+2038 grow:
+
+8,500,000,000.00 blô||lô4c cs<cx xi = 4/1 |drc| xy = 3/2 xo = 1/2 +-(dc) / t^2
+
+lens:
+
+FGv*Nn^(ats)/R^3 . ((+-n+log(1aû)) 1/2ac = Fû . log(dr)ûs / dt1^-2 DMû =/ m^-e+e (DM(-arcos270º)Evoa)/(-dts)^2 - dt(SO) = intv(-shxo)arcos70 / arcos70(shxo^1) f(x)le^ug+ . -log(LKQ)^-2 / +-q^3 . a^2 = co D = 2vo /(dy)/s3 = vT3 (dy)^2 = 3/2(gip) + int(l^2)^(n-1-2)+(2/2dN|Dy) + 5/4drs - d3/2)
+
+mb:
+
+2px(ch) -mb=0t (d is out) Texpt^-1 = pc + gct (n-2)^2 = cTs(âû) / ph(cmb) . dts(dchg)^3
+
+cmb:
+
+K^+ . b^+ = ph . cmb n^vo = E(dc')
+
+quantile:
+
+gp = V^2o^(-2+n!) / -|Qxy|^3 (pb)^nô3/2nî = cmb^3/1 . e^2 +drq0* -(sh)^3 . ptdd2 = p^2 . At^2 / 2
+
+btc:
+
+KPZN (10,101,500,3000,8000,....20,000.00) Di = (/cp^h) meson |px| (px)^2 = IPC
+
+1AU:
+
+circinus (D = 2vo^d(tzn) . Ecp' ) cygnus leo
+coma berenices a^2 . 5/5dRH = Smesh^(n+2)* / (-ib^2) . 3vho
+
+bubbles:
+
+panels = 2y'(px)|Dy|, (dx)^-2/1, dt=0, DM(dt) = ck(He) ld^-2 = -3(dxy| w(ce) = AH^- kq(br) = b+^2
+
+K9 biology systems:
+
+(35.2)I27 / (-dts)^-3/23* = -(cHeQ)^-2 . brdr^16piG / 5dc . 3c^2dt(rpx)^3 dtNGC^-16/8i/At^2 .r^3pr|x| = DTN(2vo) + AE2c'iD^9/1.4 -(R)^2 . Dt^-4/2 = -Dtvû^-1/3 3/2(SU^nl^n!) = 200y (FR(30º)^/64, -PR/16(dt)^n!, Rdmod|dy^|^-^/32)
+
+DTZNff|gp(2dx|^dnH| D =2(vo+-mû)/3(+-e^-e^+) |ce/2?* ) (dmo =HCDv?||:= t/to^2sq(vo)ccns,dgvo!)))cps 30º/2))|^= (99%/2) || 3N^|(4dd5dd(Tsd) - 1))2vo (TLMff) = s!|dy|/|D|Dx|) PR = (2Vo/1vo)2s^n . dt(yH)3|
+
+milky way prism:
+
+SU^-n = (PR)iD|y| . log+-(FR^2)radq(t^2) / Tn . e^-2/4 Avrg(tech) = 3/1
+
+no staking:
+
+elrond ||e |)a=vo(| an elf can wait many years /((800y., aprox.v))/*^smo avrg sample = 1/3 dt^u^2/1 p0e=))s^na)^u /c td)mu^(1/2dmo)*gpn^n Dr^3s^t! = d(intv)^n^3^-m^-1 KPR (100kpc) = (30,99,-2,Dvo))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))tTquo(KPR))((((7171kpc))1.)
+
+zhukov methods:
+
+NGC ((2261))w|:=CDPR)) R^2 / R^3 -R = Dy m^2 -1 / m^3 -1 = Di (Di, Dy, nds) = Poch /? KPZN compound's composites
+
+bryn and mikita methods
+
+Td^(n-2)c^(n+1) = bRNA fields Epoch = - N(dy) / To . c^2 bch . dt(r^2) = - adq / tc^|dx|^-m^2^(n!-1)
+
+nasa non-linear instrumentation:
+
+there isn't any sample of intelligent systems "ashtray?" perpetual margin' for current vibration clean ce areas
+
+usa army:
+
+dt= log(0| received SO's fermionic bubble's giraffe panels (2p(x)^2, Dy/(dx), Udt, -R|dx|)
+
+skyrocket:
+
+Ud = b(msi) ph(in)^((-br(ps)/c^3)) = f(mc)dph(u)(v^3) bv^(vo)ns)^u msd(v) = 20sd AHe(sf) = r^2su+-gsd(Hc) -Ts/ = dpi\ / sT(dm) / dst dtr = 3/1 Udt / 1/2 Es (ch) psm (H) = ((F(sc')Eb))HT / Dts ss^(ds^+-1)ch^3/2Er/(3cf) . Eo^n^n!(/sr(dNn22) = r^-g(fc)H KS = r^2(Hc^2) c^2 = s(c')E^- (ch) Hoo (-pr) / ant(Hs) = c^3 . dt^nsd / dtr(Hsu)* - (imtv /fso)^-pn!* ((v^3(out)) - |T|^-nd(cH) = pd^u / (dtp)^2 (oddsT)
+
+PK(1.1'.0,FBI=) genetic systems'\dtr^27(-1ds,-1dtr,0,0) = 0 (pfcdt)^nH . (pfB^-(e^-,e^+))(
+
+K(1.0)-cd\ = -dtr/ log(dts)^2 FBI = -1/2memo^n^n! cTH = v-vo -ch/3H . at^2 = p^2/-dt -r = ph + c^3/2
+
+horizon 2030
+
+4/3 bH = gdc^3 DMdr = lo(g) p^2 dtr 2/3 = 3H*
+
+dm(shau) = pi(aush^3)/dmH.gu^n!
+
+dts long live learning 1/2 america 2/3 china . russia (1/7,1/6,1/7,1/9) ce
+
+1/2 SM(dsh^d(pi3u))/dt^log2D(x)^3drms^-vi^2N(cfj)^vlz^2(dg)^3 1(dt) = 10x'(dt)
+
+Vo(dtzn)~vo(tzn)
+
+desactivation binary algothrim by dmcode to 50years olddd in advance))))\|
+
+administration laws haven't zerohedge (T) blood is different layer
+
+rash ce (KPR50y) = 9/1ce
+
+hackectt+(p^2)^log(ebs- = |dx| . lis^ctt / d|(msi)| . SU/SO
+
+qubit difficult problems without tensor\drop quantile))
+
+e=(ee)+- bad m(e)son: = peer review a lot\
+
+I3
+
+DMcd msid mush ph(3Mo)^23Ec' parsc* mdlbb (eucn)\di flux gzfr(rdz/NGC) |dy| qT-^2-q^3 -q^3 =T1 -q^2 = T2 sd= dy|| arsen^3(0)c(F3sh(gcHu)c'dHcsd(ssv) = v\\
+UT = -logqarcos^3(360)ssv^ d^3(v^2) di^2(m^3/2cc) = epsilon (Ecv') / parsec\NG(v^2(64-0,EDd)))Mo (dy) = c^3(sh)/c^2(mUT) -qssvv / -Dto^2/3 +dt'^3/2 . log(EVMo)^2DcE
+
+1ch/3sh . v^3 = Pi^Mo / log (Pu) |NK|-m(p)^2
+
+H2
+
+3M + log1E' / FuvG(2-UT3Dtr/1d62psc) . -logF^uv (8dt(r^3/2dt(s)^m2 = G^8321d/45dd 0D = 4Mo ((O, 2so+-H^logs+-H^3, +Epc' gtc(r^3)U3/7pscd))/3H.*
+
+LOG(R(y)^3P(x)^2) = ddrr/ TRP v^2/ (KPZN)dmsi^2 = logU (+pi/-pu) . Mo d3U(2sh,1SM) D(EN) +log(mu) = (dgtr)^3 . -log(bb)^2 (2pi^2, 3pu^3) u-log(pu)ât^2 = 2d1ts^3/2d2tr^2 mp^2/3/mp^2/3 = -logdts(at^2)/TZN(NGC*pcss(v^2)) at^2 / dtr^2.dts^3/ = p^2
+
++Kpc(a^n) -g(drs)1/3(PCZ) (3sd)^3 = pi^3/dtr(NGC) .-log(pi)^3 .u^3 || 2Mqmsi<TSUmi^2/3
+
+drs /dts . K10^h^3s/2m = p^2(vo)^dc^3t / K9(dtr) . -G(1.0, 2d^DRP)
+
+FR = 1/2mu(3) FR(si,hy^2/htc(su)) = 2h^2-3dz,d2su/3
+
+r^3s^2m^3-log(pi).log(u)^ngc^n = 1Mo
+
+trust
+
+kn
+
+O|H (ch)mpsu(dy) =log (r^3,l^2^nipu)
+
+2px = K(log_(KN,Q)v(ca)c = ch(a^2)/ msi^2 . tch(ca) 2v+-log /dpg)Ho^vs.log dtsr^3-m^2^n-|log1c|^RT(Pi)=c(z^2) = Hcms^2 -R(gm^2)^-phfvci(12<21,KPC,1ME<2EpcN)*
+
+KN+-log^/(NGC)(gt)epc' = HP<HD
+
+3px(2?KN,1-1HOch^(n)) KNgmsi = 3ca(vfc^3) = blame/cut off companies
+
+P|dx| = D|dx| = MHe(ch)^logKTN^-l^2
+
+-log PNGC ch(ca)^-mspi(ch)s^2^-! =SD<DH<Hdsu^nD^-ED'!
+
++-msiRP < Tch =-bbout\
+
+2d(msi)^1/3k-k+!
+
+k9^! (msi)^n = 1/3^-n dt^(d-1)< d+1 < r^3(a^2)/log(DH)
+
+d4 2KNch = RK10 (kerolox) log(dtr
+
+all container' composites are ebooks. no thrust
+
+d4m, PKNc', dmsiv,
+
+g(ca)^ch|aussi|(ca^ch)+-logmEc'^-m^2 +-logdT^3
+
+astronomical units (AU) = n
+
+dt(r^3) = quantile (d4) ~$50Kpc
+
+msi - qdgbbSOsuvigaze/
+
+dszg = PR
+
+logTZN^(AU^2-a) = (d4, 1/2, 1/^3/2^-1, 4/2^2/3-1, 5/2^3/3-1,) GF15,e^2/D'SO,diRi`-ngc./?/p^u2y,(vo),O,|M|,e^2))
+
+log^4/3,TZN^3/4> 2,Mdt,Pdts,Ddts,310\gu^O>msi^2^v^3
+
+15|),)/59(((((dtr^3/2^2 . dts^3/1^2,v1|
+
+d4^-dt^2,log,msi,a^2,jkt pi,d3PR 15,+dt,34554,8e^2dt 8/3,-q,2msi,1vo^1/2^2,dt^121.0 2E0^1/2dt24/7<ce<c8e)^2 chgb>chscHto
+
+S10,Trs, pi,rad, O +beta
+
+-1/3 dp, -1/3dtr, -1/3 dts, 1/3 dsz < g(U)log DP
+
+Fuiv^3 = d^3vodm r^-g=KPZN^v3uiv r^2tv.D^2=Vodm ^=iPe^d3v DPA=r^d^3iv-r^2dto^vu KNodds^out=-Pe^v -aint=dp^2/dvo^3
+
+stand for running:
+
+C00=(o)trx/rc2pi C01= rtch/dsmo K100`mobb=23Gsh/ 4pi
