--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -536,3 +536,5 @@ Fuiv^3 = d^3vodm r^-g=KPZN^v3uiv r^2tv.D^2=Vodm ^=iPe^d3v DPA=r^d^3iv-r^2dto^vu 
 stand for running:
 
 C00=(o)trx/rc2pi C01= rtch/dsmo K100`mobb=23Gsh/ 4pi
+
+branchs orders at 0,3% stock reserve
