--- a/configure.ac
+++ b/configure.ac
@@ -1286,6 +1286,7 @@ if test "$enable_fuzz" = "yes"; then
   build_bitcoin_tx=no
   build_bitcoin_util=no
   build_bitcoin_chainstate=no
+  build_navcoin_staker=no
   build_bitcoin_wallet=no
   build_navcoind=no
   build_bitcoin_libs=no
@@ -1307,6 +1308,7 @@ if test "$enable_build_libblsct_only" = "yes"; then
   build_bitcoin_tx=no
   build_bitcoin_util=no
   build_bitcoin_chainstate=no
+  build_navcoin_staker=no
   build_bitcoin_wallet=no
   build_navcoind=no
   build_bitcoin_libs=no
