--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -78,6 +78,56 @@ target_link_libraries(bitcoin_consensus
     secp256k1
 )
 
+add_library(bitcoin_kernel STATIC EXCLUDE_FROM_ALL
+  chain.cpp
+  coins.cpp
+  compressor.cpp
+  consensus/tx_verify.cpp
+  dbwrapper.cpp
+  deploymentinfo.cpp
+  deploymentstatus.cpp
+  flatfile.cpp
+  kernel/chain.cpp
+  kernel/chainparams.cpp
+  kernel/checks.cpp
+  kernel/coinstats.cpp
+  kernel/context.cpp
+  kernel/cs_main.cpp
+  kernel/disconnected_transactions.cpp
+  kernel/mempool_removal_reason.cpp
+  node/blockstorage.cpp
+  node/chainstate.cpp
+  node/utxo_snapshot.cpp
+  policy/ephemeral_policy.cpp
+  policy/feerate.cpp
+  policy/packages.cpp
+  policy/policy.cpp
+  policy/rbf.cpp
+  policy/settings.cpp
+  policy/truc_policy.cpp
+  pow.cpp
+  script/sigcache.cpp
+  script/solver.cpp
+  signet.cpp
+  txdb.cpp
+  txgraph.cpp
+  txmempool.cpp
+  validation.cpp
+  validationinterface.cpp
+  versionbits.cpp
+)
+target_link_libraries(bitcoin_kernel
+  PRIVATE
+    core_interface
+    bitcoin_consensus
+    bitcoin_kernel_util
+    leveldb
+    secp256k1
+    Boost::headers
+    $<TARGET_NAME_IF_EXISTS:USDT::headers>
+    $<$<PLATFORM_ID:Windows>:ws2_32>
+)
+
 if(WITH_ZMQ)
   add_subdirectory(zmq)
 endif()
@@ -91,7 +141,6 @@ add_library(bitcoin_common STATIC EXCLUDE_FROM_ALL
   chain.cpp
   chainparams.cpp
   chainparamsbase.cpp
-  coins.cpp
   common/args.cpp
   common/bloom.cpp
   common/config.cpp
@@ -105,12 +154,9 @@ add_library(bitcoin_common STATIC EXCLUDE_FROM_ALL
   common/signmessage.cpp
   common/system.cpp
   common/url.cpp
-  compressor.cpp
   core_io.cpp
-  deploymentinfo.cpp
   external_signer.cpp
   init/common.cpp
-  kernel/chainparams.cpp
   key.cpp
   key_io.cpp
   merkleblock.cpp
@@ -120,9 +166,6 @@ add_library(bitcoin_common STATIC EXCLUDE_FROM_ALL
   netaddress.cpp
   netbase.cpp
   outputtype.cpp
-  policy/feerate.cpp
-  policy/policy.cpp
-  pow.cpp
   protocol.cpp
   psbt.cpp
   rpc/rawtransaction_util.cpp
@@ -134,7 +177,6 @@ add_library(bitcoin_common STATIC EXCLUDE_FROM_ALL
   script/parsing.cpp
   script/sign.cpp
   script/signingprovider.cpp
-  script/solver.cpp
 )
 target_link_libraries(bitcoin_common
   PRIVATE
@@ -165,7 +207,7 @@ if(ENABLE_WALLET)
       core_interface
       bitcoin_wallet
       bitcoin_common
-      bitcoin_util
+      bitcoin_kernel
       Boost::headers
     )
     install_binary_component(bitcoin-wallet HAS_MANPAGE)
@@ -181,10 +223,6 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   bip324.cpp
   blockencodings.cpp
   blockfilter.cpp
-  consensus/tx_verify.cpp
-  dbwrapper.cpp
-  deploymentstatus.cpp
-  flatfile.cpp
   headerssync.cpp
   httprpc.cpp
   httpserver.cpp
@@ -194,22 +232,13 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   index/coinstatsindex.cpp
   index/txindex.cpp
   init.cpp
-  kernel/chain.cpp
-  kernel/checks.cpp
-  kernel/coinstats.cpp
-  kernel/context.cpp
-  kernel/cs_main.cpp
-  kernel/disconnected_transactions.cpp
-  kernel/mempool_removal_reason.cpp
   mapport.cpp
   net.cpp
   net_processing.cpp
   netgroup.cpp
   node/abort.cpp
   node/blockmanager_args.cpp
-  node/blockstorage.cpp
   node/caches.cpp
-  node/chainstate.cpp
   node/chainstatemanager_args.cpp
   node/coin.cpp
   node/coins_view_args.cpp
@@ -233,16 +262,11 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   node/txdownloadman_impl.cpp
   node/txorphanage.cpp
   node/txreconciliation.cpp
-  node/utxo_snapshot.cpp
   node/warnings.cpp
   noui.cpp
   policy/ephemeral_policy.cpp
   policy/fees/block_policy_estimator.cpp
   policy/fees/block_policy_estimator_args.cpp
-  policy/packages.cpp
-  policy/rbf.cpp
-  policy/settings.cpp
-  policy/truc_policy.cpp
   private_broadcast.cpp
   rest.cpp
   rpc/blockchain.cpp
@@ -258,16 +282,8 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   rpc/server_util.cpp
   rpc/signmessage.cpp
   rpc/txoutproof.cpp
-  script/sigcache.cpp
-  signet.cpp
   torcontrol.cpp
-  txdb.cpp
-  txgraph.cpp
-  txmempool.cpp
   txrequest.cpp
-  validation.cpp
-  validationinterface.cpp
-  versionbits.cpp
   $<$<TARGET_EXISTS:bitcoin_wallet>:wallet/init.cpp>
   $<$<NOT:$<TARGET_EXISTS:bitcoin_wallet>>:dummywallet.cpp>
 )
@@ -278,6 +294,7 @@ target_link_libraries(bitcoin_node
     bitcoin_util
     $<TARGET_NAME_IF_EXISTS:bitcoin_zmq>
     leveldb
+    bitcoin_kernel
     minisketch
     univalue
     Boost::headers
@@ -346,6 +363,7 @@ if(BUILD_CLI)
     core_interface
     bitcoin_cli
     bitcoin_common
+    bitcoin_kernel
     bitcoin_util
     libevent::core
     libevent::extra
@@ -361,6 +379,7 @@ if(BUILD_TX)
   target_link_libraries(bitcoin-tx
     core_interface
     bitcoin_common
+    bitcoin_kernel
     bitcoin_util
     univalue
   )
@@ -375,6 +394,7 @@ if(BUILD_UTIL)
   target_link_libraries(bitcoin-util
     core_interface
     bitcoin_common
+    bitcoin_kernel
     bitcoin_util
   )
   install_binary_component(bitcoin-util HAS_MANPAGE)
