validation: Add BatchVerify (unused)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -87,6 +87,7 @@ endif()
 add_library(bitcoin_common STATIC EXCLUDE_FROM_ALL
   addresstype.cpp
   base58.cpp
+  batchverify.cpp
   bech32.cpp
   chain.cpp
   chainparams.cpp
