--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -506,9 +506,7 @@ jobs:
           py -3 -m pip install pyzmq
           py -3 test/functional/test_runner.py --jobs $NUMBER_OF_PROCESSORS --quiet --tmpdirprefix="$RUNNER_TEMP" --combinedlogslen=99999999 --timeout-factor=$TEST_RUNNER_TIMEOUT_FACTOR $TEST_RUNNER_EXTRA \
             `# feature_unsupported_utxo_db.py fails on Windows because of emojis in the test data directory.` \
-            --exclude feature_unsupported_utxo_db.py \
-            `# See https://github.com/bitcoin/bitcoin/issues/31409.` \
-            --exclude wallet_multiwallet.py
+            --exclude feature_unsupported_utxo_db.py
           # Run feature_unsupported_utxo_db sequentially in ASCII-only tmp dir,
           # because it is excluded above due to lack of UTF-8 support in the
           # ancient release.
